
name:                telegram-sendmessage
version:             0.1.0.0
synopsis:            Use the Telegram API to send a message to myself
-- description:
homepage:            https://github.com/timjb/telegram-sendmessage
license:             MIT
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable telegram-sendmessage
  main-is:             telegram.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.8 && < 5,
                       telegram-api >= 0.6.1.0,
                       text,
                       directory,
                       filepath,
                       http-client,
                       http-client-tls
  -- hs-source-dirs:
  default-language:    Haskell2010
